fix dropdown alignment on rigth

--- a/packages/frontend/src/ui/styles/bulma-augmentations.scss
+++ b/packages/frontend/src/ui/styles/bulma-augmentations.scss
@@ -20,7 +20,15 @@
   .navbar-brand a:hover {
     color: $navbar-item-color;
   }
+
+  .navbar-dropdown {
+    min-width: 150px;
+
+    &.dropdown-right { left: -41px; }
+  }
 }
+
+
 
 .modal {
   transition-property: all;
